Fix dark mode

--- a/themes/wc-eh-docs/assets/scss/_dark.scss
+++ b/themes/wc-eh-docs/assets/scss/_dark.scss
@@ -1,6 +1,11 @@
 $dark-mode-dark-lighten-10: lighten($dark-mode-dark, 10%);
 $dark-mode-active-nav: darken($active-nav, 40%);
 
+.card-title .summary-title-link {
+  color: inherit !important;
+  text-decoration: none;
+}
+
 @media (prefers-color-scheme: light) {
   .navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark {
     background-color: inherit !important;
@@ -99,7 +104,7 @@ $dark-mode-active-nav: darken($active-nav, 40%);
   }
 
   .card {
-    border: 1px solid rgba(250, 250, 250, 1) !important;
+    border: 1px solid #727272 !important;
   }
 
   .summary {
@@ -107,7 +112,11 @@ $dark-mode-active-nav: darken($active-nav, 40%);
   }
 
   article.content.post .card{
-    background-color: rgba(250,250,250, 0.2);
+    background-color: #393939;
+  }
+
+  a {
+    color: var(--primary-dm);
   }
 
 }
